<resources>
    <!-- Days of the week -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Weather descriptions -->
    <string name="cloudy">Cloudy</string>
    <string name="showers">Showers</string>
    <string name="light_showers">Light Showers</string>
    <string name="heavy_rain">Heavy Rain</string>
    <string name="thunderstorms">Thunderstorms</string>
    <string name="sunny">Sunny</string>

    <!-- Temperature strings -->
    <string name="temperature">12°C, cloudy</string>
    <string name="showers_temp_range">Showers\n24C - 31C</string>
    <string name="cloudy_temp_range">Cloudy\n24C - 31C</string>
    <string name="sunny_temp_range">Sunny\n24C - 31C</string>
    <string name="heavy_rain_temp_range">Heavy Rain\n24C - 31C</string>
    <string name="thunderstorms_temp_range">Thunderstorms\n24C - 31C</string>
    <string name="light_showers_temp_range">Light Showers\n24C - 31C</string>

    <!-- City name -->
    <string name="city_name">Paris</string>
</resources>
